[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/artifact_selection.gd" id="1_artifact"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_artifact")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CanvasLayer/UIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.06, 0.07, 0.1, 1)

[node name="MainMargin" type="MarginContainer" parent="CanvasLayer/UIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 42

[node name="MainVBox" type="VBoxContainer" parent="CanvasLayer/UIRoot/MainMargin"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="HeaderHBox" type="HBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="TitleLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 44
text = "选择圣遗物"

[node name="GoldLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 20
text = "当前摩拉：0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ArtifactPanel" type="PanelContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArtifactMargin" type="MarginContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/ArtifactPanel"]
layout_mode = 2
theme_override_constants/margin_left = 26
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 22

[node name="ArtifactVBox" type="VBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/ArtifactPanel/ArtifactMargin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RuleLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/ArtifactPanel/ArtifactMargin/ArtifactVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "规则说明：\n- 同名圣遗物需要获得两次才能达到最大效果\n- 第1次获得：50%效果\n- 第2次及以上：100%效果（满级后不再提升）"
autowrap_mode = 3

[node name="ArtifactScroll" type="ScrollContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/ArtifactPanel/ArtifactMargin/ArtifactVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArtifactContainer" type="VBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/ArtifactPanel/ArtifactMargin/ArtifactVBox/ArtifactScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SkipButton" type="Button" parent="CanvasLayer/UIRoot/MainMargin/MainVBox"]
layout_mode = 2
custom_minimum_size = Vector2(240, 56)
text = "跳过（不选择）"
